tests/source1/fail/runtime_typecheck6.source
true + true;
//error: "boo type mismatch"